--- a/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
+++ b/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
@@ -21,7 +21,7 @@ device:
   - type: Tag
     id: tag1
   events:
-  - type: WorkbenchRate
+    - type: TestVisual
     appearanceRange: A
     functionalityRange: B
   - type: BenchmarkRamSysbench
