--- a/tests/files/laptop-hp_255_g3_notebook-hewlett-packard-cnd52270fw.snapshot.yaml
+++ b/tests/files/laptop-hp_255_g3_notebook-hewlett-packard-cnd52270fw.snapshot.yaml
@@ -137,7 +137,7 @@
       {
         "appearanceRange": "A",
         "functionalityRange": "A",
-        "type": "WorkbenchRate"
+        "type": "TestVisual"
       },
       {
         "elapsed": 300,
