--- a/ereuse_devicehub/dummy/files/nec.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/nec.snapshot.11.yaml
@@ -18,7 +18,7 @@
     {
       "appearanceRange": "B",
       "functionalityRange": "C",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ],
     "type": "Desktop",
