--- a/ereuse_devicehub/dummy/files/pc-laudem.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/pc-laudem.snapshot.11.yaml
@@ -122,7 +122,7 @@
     {
       "appearanceRange": "A",
       "functionalityRange": "A",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ],
     "manufacturer": "Hewlett-Packard",
