--- a/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
@@ -154,7 +154,7 @@
     {
       "appearanceRange": "B",
       "functionalityRange": "A",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ]
   },
