--- a/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
@@ -157,7 +157,7 @@
     {
       "appearanceRange": "B",
       "functionalityRange": "D",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ],
     "serialNumber": "CZC0408YJG",
