--- a/tests/files/desktop-9644w8n-lenovo-0169622.snapshot.yaml
+++ b/tests/files/desktop-9644w8n-lenovo-0169622.snapshot.yaml
@@ -92,7 +92,7 @@
     {
       "appearanceRange": "D",
       "functionalityRange": "D",
-      "type": "TestVisual"
+      "type": "VisualTest"
     },
     {
       "elapsed": 300,
