--- a/ereuse_devicehub/dummy/files/asus-1001pxd.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/asus-1001pxd.snapshot.11.yaml
@@ -164,7 +164,7 @@
     {
       "appearanceRange": "A",
       "functionalityRange": "A",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ],
     "manufacturer": "ASUSTeK Computer INC.",
