--- a/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
+++ b/ereuse_devicehub/dummy/files/workbench-server-1.snapshot.yaml
@@ -18,90 +18,90 @@ device:
   model: d1ml
   manufacturer: d1mr
   tags:
-  - type: Tag
-    id: tag1
+    - type: Tag
+      id: tag1
   events:
-    - type: TestVisual
+    - type: VisualTest
       appearanceRange: A
       functionalityRange: B
     - type: BenchmarkRamSysbench
       rate: 2444
       elapsed: 1
 components:
-- type: GraphicCard
-  serialNumber: gc1-1s
-  model: gc1-1ml
-  manufacturer: gc1-1mr
-- type: RamModule
-  serialNumber: rm1-1s
-  model: rm1-1ml
-  manufacturer: rm1-1mr
-  size: 1024
-- type: RamModule
-  serialNumber: rm2-1s
-  model: rm2-1ml
-  manufacturer: rm2-1mr
-  size: 1024
-- type: Processor
-  model: p1-1ml
-  manufacturer: p1-1mr
-  events:
-  - type: BenchmarkProcessor
-    rate: 2410
-    elapsed: 44
-  - type: BenchmarkProcessorSysbench
-    rate: 4400
-    elapsed: 44
-- type: SolidStateDrive
-  serialNumber: ssd1-1s
-  model: ssd1-1ml
-  manufacturer: ssd1-1mr
-  size: 1100
-  events:
-  - type: BenchmarkDataStorage
-    readSpeed: 20
-    writeSpeed: 15
-    elapsed: 21
-  - type: TestDataStorage
-    elapsed: 233
-    severity: Info
-    status: Completed without error
-    length: Short
-    lifetime: 99
-    assessment: True
-    powerCycleCount: 11
-    reallocatedSectorCount: 2
-    reportedUncorrectableErrors: 1
-    commandTimeout: 11
-    currentPendingSectorCount: 1
-    offlineUncorrectable: 33
-    remainingLifetimePercentage: 1
-- type: HardDrive
-  serialNumber: hdd1-1s
-  model: hdd1-1ml
-  manufacturer: hdd1-1mr
-  events:
-  - type: BenchmarkDataStorage
-    readSpeed: 10
-    writeSpeed: 5
-    elapsed: 20
-- type: Motherboard
-  serialNumber: mb1-1s
-  model: mb1-1ml
-  manufacturer: mb1-1mr
-- type: NetworkAdapter
-  serialNumber: na1-s
-  model: na1-1ml
-  manufacturer: na1-1mr
-  speed: 1000
-  wireless: False
-- type: NetworkAdapter
-  serialNumber: na2-s
-  model: na2-1ml
-  manufacturer: na2-1mr
-  wireless: True
-  speed: 58
-- type: RamModule
-  serialNumber: rm3-1s
-  model: rm3-1ml
-  manufacturer: rm3-1mr
+  - type: GraphicCard
+    serialNumber: gc1-1s
+    model: gc1-1ml
+    manufacturer: gc1-1mr
+  - type: RamModule
+    serialNumber: rm1-1s
+    model: rm1-1ml
+    manufacturer: rm1-1mr
+    size: 1024
+  - type: RamModule
+    serialNumber: rm2-1s
+    model: rm2-1ml
+    manufacturer: rm2-1mr
+    size: 1024
+  - type: Processor
+    model: p1-1ml
+    manufacturer: p1-1mr
+    events:
+      - type: BenchmarkProcessor
+        rate: 2410
+        elapsed: 44
+      - type: BenchmarkProcessorSysbench
+        rate: 4400
+        elapsed: 44
+  - type: SolidStateDrive
+    serialNumber: ssd1-1s
+    model: ssd1-1ml
+    manufacturer: ssd1-1mr
+    size: 1100
+    events:
+      - type: BenchmarkDataStorage
+        readSpeed: 20
+        writeSpeed: 15
+        elapsed: 21
+      - type: TestDataStorage
+        elapsed: 233
+        severity: Info
+        status: Completed without error
+        length: Short
+        lifetime: 99
+        assessment: True
+        powerCycleCount: 11
+        reallocatedSectorCount: 2
+        reportedUncorrectableErrors: 1
+        commandTimeout: 11
+        currentPendingSectorCount: 1
+        offlineUncorrectable: 33
+        remainingLifetimePercentage: 1
+  - type: HardDrive
+    serialNumber: hdd1-1s
+    model: hdd1-1ml
+    manufacturer: hdd1-1mr
+    events:
+      - type: BenchmarkDataStorage
+        readSpeed: 10
+        writeSpeed: 5
+        elapsed: 20
+  - type: Motherboard
+    serialNumber: mb1-1s
+    model: mb1-1ml
+    manufacturer: mb1-1mr
+  - type: NetworkAdapter
+    serialNumber: na1-s
+    model: na1-1ml
+    manufacturer: na1-1mr
+    speed: 1000
+    wireless: False
+  - type: NetworkAdapter
+    serialNumber: na2-s
+    model: na2-1ml
+    manufacturer: na2-1mr
+    wireless: True
+    speed: 58
+  - type: RamModule
+    serialNumber: rm3-1s
+    model: rm3-1ml
+    manufacturer: rm3-1mr
