--- a/tests/files/asus-1001pxd.snapshot.yaml
+++ b/tests/files/asus-1001pxd.snapshot.yaml
@@ -118,7 +118,7 @@
     {
       "appearanceRange": "A",
       "functionalityRange": "A",
-      "type": "TestVisual"
+      "type": "VisualTest"
     }
     ],
     "manufacturer": "ASUSTeK Computer INC.",
