--- a/tests/files/basic.snapshot.yaml
+++ b/tests/files/basic.snapshot.yaml
@@ -10,7 +10,7 @@ device:
   model: d1ml
   manufacturer: d1mr
   events:
-    - type: TestVisual
+    - type: VisualTest
       appearanceRange: A
       functionalityRange: B
 components:
