Sort events by default using end_time

--- a/ereuse_devicehub/dummy/files/asus-eee-1000h.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/asus-eee-1000h.snapshot.11.yaml
@@ -121,5 +121,5 @@
   ],
   "version": "11.0a4",
   "elapsed": 6,
-  "endTime": "2016-11-03T17:17:17.266543"
+  "endTime": "2016-11-03T17:17:17.266543+00:00"
 }
