--- a/ereuse_devicehub/dummy/files/hp1.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/hp1.snapshot.11.yaml
@@ -9,7 +9,7 @@
   "closed": false,
   "elapsed": -3058,
   "uuid": "106930cd-e948-4cca-a8c8-1e39d6192ad6",
-  "endTime": "2018-07-11T10:47:50.822380",
+  "endTime": "2018-07-11T10:47:50.822380+00:00",
   "components": [
   {
     "type": "Processor",
@@ -73,15 +73,15 @@
     {
       "type": "EraseBasic",
 
-      "endTime": "2018-07-11T11:56:52.390306",
+      "endTime": "2018-07-11T11:56:52.390306+00:00",
       "severity": "Info",
-      "startTime": "2018-07-11T10:49:31.998217",
+      "startTime": "2018-07-11T10:49:31.998217+00:00",
       "steps": [
       {
         "type": "StepRandom",
-        "endTime": "2018-07-11T11:56:52.386505",
+        "endTime": "2018-07-11T11:56:52.386505+00:00",
         "severity": "Info",
-        "startTime": "2018-07-11T10:49:31.998609"
+        "startTime": "2018-07-11T10:49:31.998609+00:00"
       }
       ]
     },
