--- a/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
@@ -98,15 +98,15 @@
       "steps": [
       {
         "type": "StepRandom",
-        "startTime": "2018-07-03T09:15:22.257059",
+        "startTime": "2018-07-03T09:15:22.257059+00:00",
         "severity": "Info",
-        "endTime": "2018-07-03T10:32:11.843190"
+        "endTime": "2018-07-03T10:32:11.843190+00:00"
       }
       ],
-      "startTime": "2018-07-03T09:15:22.256074",
+      "startTime": "2018-07-03T09:15:22.256074+00:00",
       "severity": "Info",
 
-      "endTime": "2018-07-03T10:32:11.848455"
+      "endTime": "2018-07-03T10:32:11.848455+00:00"
     }
     ]
   },
@@ -133,7 +133,7 @@
   "version": "11.0a2",
   "type": "Snapshot",
   "software": "Workbench",
-  "endTime": "2018-07-03T09:10:57.034598",
+  "endTime": "2018-07-03T09:10:57.034598+00:00",
   "device": {
     "type": "Laptop",
     "model": "1001PXD",
