--- a/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
@@ -167,5 +167,5 @@
     "model": "HP Compaq 8100 Elite SFF"
   },
   "type": "Snapshot",
-  "endTime": "2018-06-29T12:28:54.508266"
+  "endTime": "2018-06-29T12:28:54.508266+00:00"
 }
