--- a/ereuse_devicehub/dummy/files/real-toshiba.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-toshiba.snapshot.11.yaml
@@ -4,7 +4,7 @@
     "Benchmark",
     "StressTest"
   ],
-  "endTime": "2018-06-29T15:29:29.322424",
+  "endTime": "2018-06-29T15:29:29.322424+00:00",
   "elapsed": 391,
   "software": "Workbench",
   "components": [
