--- a/ereuse_devicehub/dummy/files/smart.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/smart.snapshot.11.yaml
@@ -158,7 +158,7 @@
     "serialNumber": "CZC0408YJG"
   }
   ],
-  "endTime": "2018-07-11T16:11:43.467824",
+  "endTime": "2018-07-11T16:11:43.467824+00:00",
   "version": "11.0a3",
   "software": "Workbench",
   "type": "Snapshot",
