--- a/tests/files/erase-sectors-2-hdd.snapshot.yaml
+++ b/tests/files/erase-sectors-2-hdd.snapshot.yaml
@@ -70,19 +70,19 @@
     "type": "HardDrive",
     "events": [
     {
-      "endTime": "2018-07-13T11:54:55.100581",
+      "endTime": "2018-07-13T11:54:55.100581+00:00",
       "steps": [
       {
-        "endTime": "2018-07-13T11:54:55.096491",
+        "endTime": "2018-07-13T11:54:55.096491+00:00",
         "type": "StepRandom",
         "severity": "Info",
-        "startTime": "2018-07-13T10:52:45.092981"
+        "startTime": "2018-07-13T10:52:45.092981+00:00"
       }
       ],
       "type": "EraseBasic",
       "severity": "Info",
 
-      "startTime": "2018-07-13T10:52:45.092612"
+      "startTime": "2018-07-13T10:52:45.092612+00:00"
     },
     {
       "lifetime": 24658,
@@ -114,18 +114,18 @@
     "type": "HardDrive",
     "events": [
     {
-      "endTime": "2018-07-13T12:55:47.331586",
+      "endTime": "2018-07-13T12:55:47.331586+00:00",
       "steps": [
       {
-        "endTime": "2018-07-13T12:55:47.326835",
+        "endTime": "2018-07-13T12:55:47.326835+00:00",
         "type": "StepRandom",
         "severity": "Info",
-        "startTime": "2018-07-13T11:54:55.100925"
+        "startTime": "2018-07-13T11:54:55.100925+00:00"
       }
       ],
       "type": "EraseBasic",
       "severity": "Info",
-      "startTime": "2018-07-13T11:54:55.100667"
+      "startTime": "2018-07-13T11:54:55.100667+00:00"
     },
     {
       "lifetime": 21979,
@@ -170,5 +170,5 @@
     "serialNumber": "109192430003459"
   }
   ],
-  "endTime": "2018-07-13T10:48:36.738398"
+  "endTime": "2018-07-13T10:48:36.738398+00:00"
 }
