--- a/tests/files/real-custom.snapshot.11.yaml
+++ b/tests/files/real-custom.snapshot.11.yaml
@@ -123,6 +123,6 @@
   },
   "type": "Snapshot",
   "software": "Workbench",
-  "endTime": "2018-07-19T15:48:40.635776",
+  "endTime": "2018-07-19T15:48:40.635776+00:00",
   "closed": false
 }
