--- a/ereuse_devicehub/dummy/files/dell-optiplexgx520.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/dell-optiplexgx520.snapshot.11.yaml
@@ -92,15 +92,15 @@
       {
         "severity": "Info",
         "type": "StepRandom",
-        "startTime": "2018-07-11T11:20:01.005336",
-        "endTime": "2018-07-11T11:42:12.971177"
+        "startTime": "2018-07-11T11:20:01.005336+00:00",
+        "endTime": "2018-07-11T11:42:12.971177+00:00"
       }
       ],
 
       "severity": "Info",
       "type": "EraseBasic",
-      "endTime": "2018-07-11T11:42:12.975358",
-      "startTime": "2018-07-11T11:20:01.004892"
+      "endTime": "2018-07-11T11:42:12.975358+00:00",
+      "startTime": "2018-07-11T11:20:01.004892+00:00"
     },
     {
       "writeSpeed": 26.6,
@@ -151,7 +151,7 @@
   "version": "11.0a3",
   "closed": false,
   "elapsed": 1512,
-  "endTime": "2018-07-11T11:17:00.888231",
+  "endTime": "2018-07-11T11:17:00.888231+00:00",
   "type": "Snapshot",
   "expectedEvents": [
     "Benchmark",
