--- a/ereuse_devicehub/dummy/files/hp2.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/hp2.snapshot.11.yaml
@@ -80,17 +80,17 @@
       "readSpeed": 77.7
     },
     {
-      "startTime": "2018-07-11T10:32:14.445306",
+      "startTime": "2018-07-11T10:32:14.445306+00:00",
 
       "type": "EraseBasic",
       "severity": "Info",
-      "endTime": "2018-07-11T10:53:46.442123",
+      "endTime": "2018-07-11T10:53:46.442123+00:00",
       "steps": [
       {
-        "startTime": "2018-07-11T10:32:14.445496",
+        "startTime": "2018-07-11T10:32:14.445496+00:00",
         "type": "StepRandom",
         "severity": "Info",
-        "endTime": "2018-07-11T10:53:46.438901"
+        "endTime": "2018-07-11T10:53:46.438901+00:00"
       }
       ]
     }
@@ -112,17 +112,17 @@
       "length": "Short"
     },
     {
-      "startTime": "2018-07-11T10:53:46.442187",
+      "startTime": "2018-07-11T10:53:46.442187+00:00",
 
       "type": "EraseBasic",
       "severity": "Info",
-      "endTime": "2018-07-11T11:16:28.469899",
+      "endTime": "2018-07-11T11:16:28.469899+00:00",
       "steps": [
       {
-        "startTime": "2018-07-11T10:53:46.442343",
+        "startTime": "2018-07-11T10:53:46.442343+00:00",
         "type": "StepRandom",
         "severity": "Info",
-        "endTime": "2018-07-11T11:16:28.463789"
+        "endTime": "2018-07-11T11:16:28.463789+00:00"
       }
       ]
     },
@@ -175,6 +175,6 @@
     "EraseBasic"
   ],
   "software": "Workbench",
-  "endTime": "2018-07-11T10:30:22.395958",
+  "endTime": "2018-07-11T10:30:22.395958+00:00",
   "elapsed": 2766
 }
